<resources>
    <string name="app_name">Emergency App</string>
    <string name="title_activity_map">Map</string>
    <string name="news">News</string>
    <string name="title">Title</string>
    <string name="emergency_contacts">Helpline Numbers</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="personal_contacts">Emergency Contacts</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="services">Services</string>
    <string name="fire">Fire</string>
    <string name="flood">Flood</string>
    <string name="tsunami">Tsunami</string>
    <string name="terror">Terror Attack</string>
    <string name="route">Traffic Diversions</string>
    <string name="earthquake">Earthquake</string>
    <string name="safe_house">Safe Locations</string>
    <string name="notifications">Notifications</string>
    <string name="cpr">CPR</string>
    <string name="drowning">Drowning in Sea</string>
    <string name="building">Fire in Building</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sample_excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="lorem_ipsum_50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut libero odio, pellentesque a est vel, consequat luctus eros. Fusce nisl lacus, facilisis sit amet mauris in, molestie bibendum felis. Vivamus in sem sapien. Nunc augue mi, rutrum eget rhoncus dapibus, varius ut nisl. Aliquam vitae lectus sed eros dignissim placerat.</string>
    <string name="termsnConditions">I agree </string>
    <string name="termsandconditions">I agree to all <u>Terms And Conditions</u></string>
    <string name="skip"><u>Skip for now</u></string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_session_manager">SessionManager</string>
    <string name="title_activity_about_ncw">AboutNCWActivity</string>
    <string name="location_permission_rationale">The app requires your permission to accessyour location in order to upload it in case of an emergency</string>

    <string name="location_access">Location access not granted! Cannot show current location.</string>
    <string name="air2">3.Two Air India flights from Pune to New Delhi were cancelled for two successive days due to unspecified technical issues following which passengers were shifted to another flight this evening.
</string>
<string name="air1">2.Heavy rains lashed Mumbai and its suburbs on Friday throwing the city out of gear. Heavy traffic snarls have been reported from several places across the city.
All flights arriving to and departing from Mumbai have been delayed. Also, all trains moving from Thane station to CST have been delayed.
</string>
    <string name="air">1.After fliers’ first brush with fog-induced disruptions in north India this winter on Thursday, more than 100 fliers who were to travel to Goa on an IndiGo Airlines flight were held up at the city airport for almost five hours.
 This, the officials said, was a cascading effect of the airline schedules disrupted due to poor visibility in the north.
</string>
<string name="train">1.Around 20 trains were cancelled and 58 were diverted today as railway traffic on the Delhi-Kanpur section was disrupted due to the derailment of Sealdah-Ajmer Express near Rura station.
  A senior Railway Ministry official said four trains were also short terminated due to the derailment near Kanpur.
</string>
    <string name="train1">2.The nationwide strike call against demonetisation evoked mixed reaction in Bihar where workers of RJD,
 Congress and Left parties disrupted train services at many places but offices and schools registered normal attendance.</string>
    <string name="train2">3.An unclaimed object in a local train triggered a bomb scare tonight at the busy Howrah station,
 prompting Eastern Railway officials to shut down local train operations temporarily.</string>
    <string name="road">1.Water Logging was reported from Malji Rathod Chowk BPT colony, Sion, King Circle, Hind Matha, Pratiksha Nagar and National college.</string>
    <string name="road1">2.Heavy traffic jam is seen near Lilavati Hospital in Bandra, Western Express highway, Eastern Freeway and Dadar.</string>
    <string name="road2">3.Two persons were killed and three others injured in a freak accident that involved an explosion in a moving chemical tanker and
subsequent pile-up of three vehicles on the Mumbai-Ahmedabad Highway today, causing massive disruption of traffic for hours.
Railway</string>
    <string name="title_activity_sosmap">Map</string>


</resources>
