<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/md_light_blue_100"
    >

    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/road"
        android:id="@+id/textView"
        android:textSize="15dp"
        android:textColor="@color/md_black_1000"

        />

    <View
        android:layout_width="448dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@+id/textView"
        android:id="@+id/View1"
        />
    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/road1"
        android:id="@+id/textView11"
        android:textSize="15dp"
        android:layout_below="@+id/View1"
        android:textColor="@color/md_black_1000"

        />
    <View
        android:layout_width="448dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textView11"
        android:id="@+id/View11"
        />
    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/road2"
        android:id="@+id/textView21"
        android:textSize="15dp"
        android:layout_below="@+id/View11"
        android:textColor="@color/md_black_1000"

        />
</RelativeLayout>