<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/md_light_blue_100"
    >

    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        android:id="@+id/textView3"
        android:textSize="15dp"
        android:textColor="@color/md_black_1000"
        />

    <View
        android:layout_width="448dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@+id/textView3"
        android:id="@+id/View3"
        />
    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train1"
        android:id="@+id/textView13"
        android:textSize="15dp"
        android:layout_below="@+id/View3"
        android:textColor="@color/md_black_1000"
        />
    <View
        android:layout_width="448dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textView13"
        android:id="@+id/View13"
        />
    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train2"
        android:id="@+id/textView23"
        android:textSize="15dp"
        android:layout_below="@+id/View13"
        android:textColor="@color/md_black_1000"

        />
</RelativeLayout>